--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main id="container">
-      <h1 class="title">🐷 가계부</h1>
+      <h1 class="title"> 가계부</h1>
 
       <!-- 현재 자산 start -->
       <div class="current-asset">
@@ -27,7 +27,7 @@
 
       <!-- 소비내역 작성하기 start -->
       <div class="add-item">
-        <button class="v-none c-button add-item-button">➕ 소비내역 작성하기</button>
+        <button class="v-none c-button add-item-button"> 소비내역 작성하기</button>
       </div>
 
       <section class="v-none add-item-detail">
